# peer-observer

./: analyze_increase.md  template-compose-yml
extractors/ebpf/: Cargo.toml  README.md  run_dummy.sh
extractors/ebpf/src/: error.rs  lib.rs
extractors/ebpf/src/bpf/: tracing.bpf.c
extractors/ebpf/test_bin/: bitcoind_usdt_dummy.rs
extractors/log/tests/: integration.rs
extractors/p2p/tests/: integration.rs
extractors/rpc/: README.md
extractors/rpc/src/: error.rs  lib.rs
extractors/rpc/tests/: integration.rs
protobuf/: ebpf_extractor.proto  log_extractor.proto
shared/: Cargo.toml  build.rs
shared/src/: lib.rs  log_matchers.rs  nats_subjects.rs
shared/src/protobuf/: rpc_extractor.rs
shared/src/protobuf/ebpf_extractor/: ctypes.rs  mod.rs
shared/src/testing/: events_generator.rs  metrics_fetcher.rs  mod.rs
tools/logger/: README.md
tools/logger/src/: lib.rs
tools/logger/tests/: integration.rs
tools/metrics/dashboards/: anomaly_dashboard.json  anomaly_no_rules_dashboard.json  fees-estimatesmartfee.json
tools/metrics/prometheus/: backfill_rules.sh  prometheus.yml
tools/metrics/prometheus/rules/: anomalies.yml  monotonic.yml
tools/metrics/src/: lib.rs  metrics.rs
tools/metrics/tests/: integration.rs
tools/websocket/: Cargo.toml
tools/websocket/src/: error.rs  lib.rs  main.rs
tools/websocket/tests/: integration.rs
tools/websocket/www/: addrrelay.html  addrspace.html  index.html  netinfo.html  p2p-circle.html  peers.html  pingpong.html  txrelay.html
tools/websocket/www/js/: lib.js  websocket-picker.js
